--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,16 +8,21 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
 </head>
+
 <body>
     <h3>Simple Flex Responsive</h3>
     <div class="container">
         <div class="box">
             <h3>First Box</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit aliquid tempora modi explicabo fugit quos ducimus omnis doloremque reprehenderit hic quam placeat obcaecati ipsa vel beatae, animi eaque iure eum!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit aliquid tempora modi explicabo fugit quos
+                ducimus omnis doloremque reprehenderit hic quam placeat obcaecati ipsa vel beatae, animi eaque iure eum!
+            </p>
         </div>
         <div class="box">
             <h3>First Box</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit aliquid tempora modi explicabo fugit quos ducimus omnis doloremque reprehenderit hic quam placeat obcaecati ipsa vel beatae, animi eaque iure eum!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit aliquid tempora modi explicabo fugit quos
+                ducimus omnis doloremque reprehenderit hic quam placeat obcaecati ipsa vel beatae, animi eaque iure eum!
+            </p>
         </div>
     </div>
     <div class="container-2">
@@ -31,6 +37,7 @@
         <div class="item">item - 9</div>
         <div class="item">item - 10</div>
     </div>
-      
+
 </body>
+
 </html>
